Cleanup // replace placeholder app name with `openfisca-djangoapi`

--- a/services/nginx/openfisca-djangoapi.conf
+++ b/services/nginx/openfisca-djangoapi.conf
@@ -2,8 +2,8 @@ server {
     listen         80 default_server;
     server_name    _;
 
-    access_log /var/log/nginx/nginx.vhost.hello.access.log;
-    error_log /var/log/nginx/nginx.vhost.hello.error.log;
+    access_log /var/log/nginx/nginx.vhost.openfisca-djangoapi.access.log;
+    error_log /var/log/nginx/nginx.vhost.openfisca-djangoapi.error.log;
 
     location / {
         proxy_pass       http://app:8000;
