--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -4,6 +4,7 @@ psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
 jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
 uwsgi==2.0.18               # The uWSGI Server
 Jinja2==2.10.1              # A small but fast and easy to use stand-alone template engine written in pure python.
+djangorestframework==3.12.2 # Web APIs for Django, made easy
 
 # Linting
 pylint==2.3.1               # python code static checker
