Add `requests` to requirement.txt - alphabetise requirements.txt

--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -1,11 +1,10 @@
 Django==3.1.7               # A high-level Python Web framework that encourages rapid development and clean, pragmatic design.
 django-debug-toolbar==3.2   # A configurable set of panels that display various debug information about the current request/response.
-psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
-jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
-uwsgi==2.0.18               # The uWSGI Server
-Jinja2==2.10.1              # A small but fast and easy to use stand-alone template engine written in pure python.
-djangorestframework==3.12.2 # Web APIs for Django, made easy
 django-environ==0.4.5       # Django-environ allows you to utilize 12factor inspired environment variables to configure your Django application.
-
-# Linting
+djangorestframework==3.12.2 # Web APIs for Django, made easy
+Jinja2==2.10.1              # A small but fast and easy to use stand-alone template engine written in pure python.
+jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
+psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
 pylint==2.3.1               # python code static checker
+requests==2.25.1            # Python HTTP for Humans.
+uwsgi==2.0.18               # The uWSGI Server
