--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -1,3 +1,4 @@
+black==20.8b1               # The uncompromising code formatter.
 Django==3.1.7               # A high-level Python Web framework that encourages rapid development and clean, pragmatic design.
 django-debug-toolbar==3.2   # A configurable set of panels that display various debug information about the current request/response.
 django-environ==0.4.5       # Django-environ allows you to utilize 12factor inspired environment variables to configure your Django application.
