--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ db.sqlite3
 
 # VScode
 .vscode/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
