--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -11,6 +11,7 @@ drf-spectacular==0.13.2     # Sane and flexible OpenAPI 3 schema generation for 
 Jinja2==2.10.1              # A small but fast and easy to use stand-alone template engine written in pure python.
 jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
 numpy==1.20.1               # A package for array computing with Python.
+networkx==2.5               #package for creating and manipulating graphs and networks
 psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
 pylint==2.3.1               # python code static checker
 plotly==4.14.3              # interactive data visualization for Python
