--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.10.1              # A small but fast and easy to use stand-alone templ
 jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
 numpy                       # A package for array computing with Python.
 networkx==2.5               #package for creating and manipulating graphs and networks
+pandas==1.2.4               #Powerful data structures for data analysis, time series, and statistics
 psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
 pylint==2.3.1               # python code static checker
 plotly==4.14.3              # interactive data visualization for Python
