--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY=JeffreyLebowski
 WSGI_MODULE=config.wsgi:application
 PORT=8000
 
-OPENFISCA_API_URL=https://dpie-ess-dev.herokuapp.com/
+OPENFISCA_API_URL=https://dpie-ess-dev.herokuapp.com
 
 
 ## Postgres (unused)
