--- a/.ebextensions/02_django_migration_and_collectstatic.config
+++ b/.ebextensions/02_django_migration_and_collectstatic.config
@@ -2,5 +2,7 @@ container_commands:
   01_migrate:
     command: "source /var/app/venv/*/bin/activate && python ./app/manage.py migrate --noinput"
     leader_only: true
-  02_fetch_data:
+  02_collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python ./app/manage.py collectstatic --noinput"
+  03_fetch_data:
     command: "source /var/app/venv/*/bin/activate && python ./app/manage.py fetch_all"
