--- a/.github/workflows/deploy_to_azure_vm.yml
+++ b/.github/workflows/deploy_to_azure_vm.yml
@@ -25,5 +25,6 @@ jobs:
             pip install -r requirements.txt
             python app/manage.py migrate
             python app/manage.py fetch_all
+            python app/manage.py collectstatic
             sudo supervisorctl restart all
             exit
