Add `repository_dispatch` Github Action trigger

--- a/.github/workflows/deploy_to_azure_vm.yml
+++ b/.github/workflows/deploy_to_azure_vm.yml
@@ -3,6 +3,8 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
+  repository_dispatch: # Triggered by a `push` event on a submodule
+    types: [openfisca-ruleset-updated] # repository_dispatch must have 'type' == "submodule-updated"
 
 jobs:
   build:
