--- a/.github/workflows/cicd-config_openfisca-djangoapi(dev).yml
+++ b/.github/workflows/cicd-config_openfisca-djangoapi(dev).yml
@@ -29,8 +29,11 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
+
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+
+      - name: Migrate db
+        run: python app/manage.py migrate
       
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
