--- a/.github/workflows/test_azure_openfisca-djangoapi(proto).yml
+++ b/.github/workflows/test_azure_openfisca-djangoapi(proto).yml
@@ -43,7 +43,7 @@ jobs:
         with:
           name: python-app
           path: |
-            . 
+            ./app
             !venv/
 
   deploy:
