--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ pylint==2.3.1               # python code static checker
 plotly==4.14.3              # interactive data visualization for Python
 requests==2.25.1            # Python HTTP for Humans.
 uwsgi==2.0.18               # The uWSGI Server
+debugpy
