--- a/.github/workflows/deploy_to_azure_vm.yml
+++ b/.github/workflows/deploy_to_azure_vm.yml
@@ -25,6 +25,7 @@ jobs:
             git fetch --all
             git reset --hard origin/main
             pip install -r requirements.txt
+            rm app/db.sqlite3
             python app/manage.py migrate
             python app/manage.py fetch_all
             python app/manage.py collectstatic --noinput
