--- a/.github/workflows/djangoapi_azure_vm(dev).yml
+++ b/.github/workflows/djangoapi_azure_vm(dev).yml
@@ -26,8 +26,8 @@ jobs:
             git reset --hard origin/develop
             pip install -r requirements.txt
             rm app/db.sqlite3
-            python app/manage.py migrate
-            python app/manage.py fetch_all
-            python app/manage.py collectstatic --noinput
+            python3 app/manage.py migrate
+            python3 app/manage.py fetch_all
+            python3 app/manage.py collectstatic --noinput
             sudo supervisorctl restart all
             exit
