--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,17 @@ services:
       dockerfile: ./services/app/Dockerfile
     command: dev
     #command: uwsgi
-    ports:
-      - 8000:8000
-      - 8001:8001
+    hostname: "app-django-ess.local.ro2.dev"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.app-django-ess.rule=Host(`app-django-ess.local.ro2.dev`)"
+      - "traefik.http.routers.app-django-ess.entrypoints=https"
+      - "traefik.http.routers.app-django-ess.tls=true"
+      - "traefik.http.services.app-django-ess.loadbalancer.server.port=8000"
+    networks:
+      - "default"
+      - "ess"
+      - "ro2dev"
     volumes:
       - ./app:/usr/src/app
     # depends_on:
@@ -36,7 +44,23 @@ services:
     build:
       context: ./
       dockerfile: ./services/nginx/Dockerfile
-    ports:
-      - 80:80
+    hostname: "web-django-ess.local.ro2.dev"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.web-django-ess.rule=Host(`web-django-ess.local.ro2.dev`)"
+      - "traefik.http.routers.web-django-ess.entrypoints=https"
+      - "traefik.http.routers.web-django-ess.tls=true"
+      - "traefik.http.services.web-django-ess.loadbalancer.server.port=80"
+    networks:
+      - "default"
+      - "ess"
+      - "ro2dev"
     depends_on:
       - app
+
+networks:
+  default:
+  ess:
+    external: true
+  ro2dev:
+    external: true
