--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,14 @@
-version: "3"
-
 services:
-  # PostgreSQL
-  # postgres:
-  #   image: postgres:11.4
-  #   hostname: postgres
-  #   ports:
-  #     - 5432:5432 # Bind host port 5432 to PostgreSQL port 5432
-  #   volumes:
-  #     - ./pgdata:/var/lib/postgresql/data
-  #   environment:
-  #     - LC_ALL=C.UTF-8
-  #     - POSTGRES_USER=docker
-  #     - POSTGRES_PASSWORD=docker
-
-  # Django app
   app:
     build:
       context: .
       dockerfile: ./services/app/Dockerfile
-    command: dev
-    #command: uwsgi
-    ports:
-      - 8000:8000
-      - 8001:8001
+      platforms:
+        - 'linux/amd64'
+    # command: dev
+    # command: uwsgi
     volumes:
       - ./app:/usr/src/app
-    # depends_on:
-    #   - postgres
-    # links:
-    #   - postgres:postgres
     env_file: .env
 
   web:
@@ -37,6 +16,6 @@ services:
       context: ./
       dockerfile: ./services/nginx/Dockerfile
     ports:
-      - 80:80
+      - '8081:80'
     depends_on:
       - app
