--- a/services/app/requirements.txt
+++ b/services/app/requirements.txt
@@ -1,21 +1,60 @@
-aiohttp==3.7.4              # Async http client/server framework (asyncio)
-black==20.8b1               # The uncompromising code formatter.
-Django==3.1.7               # A high-level Python Web framework that encourages rapid development and clean, pragmatic design.
-django-cors-headers==3.7.0  # a Django application for handling the server headers required for Cross-Origin Resource Sharing (CORS).
-django-debug-toolbar==3.2   # A configurable set of panels that display various debug information about the current request/response.
-django-environ==0.4.5       # Django-environ allows you to utilize 12factor inspired environment variables to configure your Django application.
-django-filter==2.4.0        # Django-filter is a reusable Django application for allowing users to filter querysets dynamically.
-djangorestframework==3.12.2 # Web APIs for Django, made easy
-djangorestframework-recursive==0.1.2    # Recursive Serialization for Django REST framework
-drf-spectacular==0.13.2     # Sane and flexible OpenAPI 3 schema generation for Django REST framework
-Jinja2==2.10.1              # A small but fast and easy to use stand-alone template engine written in pure python.
-jsonfield==3.1.0            # A reusable Django field that allows you to store validated JSON in your model
-numpy                       # A package for array computing with Python.
-networkx==2.5               #package for creating and manipulating graphs and networks
-pandas==1.2.4               #Powerful data structures for data analysis, time series, and statistics
-# psycopg2==2.8.6             # Python-PostgreSQL Database Adapter
-psycopg2-binary
-pylint==2.3.1               # python code static checker
-plotly==4.14.3              # interactive data visualization for Python
-requests==2.25.1            # Python HTTP for Humans.
-uwsgi==2.0.18               # The uWSGI Server
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+asgiref==3.11.0
+astroid==4.0.2
+attrs==25.4.0
+black==25.12.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+dill==0.4.0
+Django==5.2.9
+django-cors-headers==4.9.0
+django-debug-toolbar==6.1.0
+django-environ==0.12.0
+django-filter==25.2
+djangorestframework==3.16.1
+djangorestframework-recursive==0.1.2
+drf-spectacular==0.29.0
+frozenlist==1.8.0
+idna==3.11
+inflection==0.5.1
+isort==7.0.0
+Jinja2==3.1.6
+jsonfield==3.2.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.3
+mccabe==0.7.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+narwhals==2.14.0
+networkx==3.6.1
+numpy==2.4.0
+packaging==25.0
+pandas==2.3.3
+pathspec==0.12.1
+platformdirs==4.5.1
+plotly==6.5.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
+pylint==4.0.4
+python-dateutil==2.9.0.post0
+pytokens==0.3.0
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.30.0
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.5
+tomlkit==0.13.3
+typing_extensions==4.15.0
+tzdata==2025.3
+uritemplate==4.2.0
+urllib3==2.6.2
+uWSGI==2.0.31
+wheel==0.45.1
+yarl==1.22.0
