--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -18,6 +18,7 @@ http {
 
     access_log  /logs/nginx_access.log  main;
 
+    server_tokens   off;
     sendfile        on;
     #tcp_nopush     on;
 
